--- a/fcrepo-client/fcrepo-client-admin/pom.xml
+++ b/fcrepo-client/fcrepo-client-admin/pom.xml
@@ -186,6 +186,11 @@
       <version>1.1.2_01</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-core</artifactId>
+      <version>3.5.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.fcrepo</groupId>
       <artifactId>mulgara-core</artifactId>
     </dependency>
