--- a/pom.xml
+++ b/pom.xml
@@ -776,6 +776,13 @@
   <dependencies>
 
     <dependency>
+      <groupId>mockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <version>0.999.4</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.5</version>
