--- a/pom.xml
+++ b/pom.xml
@@ -776,16 +776,23 @@
   <dependencies>
 
     <dependency>
+      <groupId>com.googlecode.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <version>0.999.8</version>
+      <scope>test</scope>
+    </dependency>
+    <!--dependency>
       <groupId>mockit</groupId>
       <artifactId>jmockit</artifactId>
       <version>0.999.4</version>
       <scope>test</scope>
-    </dependency>
+    </dependency-->
+
 
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.5</version>
+      <version>4.10</version>
       <!-- <scope>test</scope> -->
     </dependency>
 
