--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -776,6 +776,7 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
