Removed conflicting asm-4.0.jar file brought in by kryo library

--- a/fcrepo-server/pom.xml
+++ b/fcrepo-server/pom.xml
@@ -820,6 +820,13 @@
       <groupId>com.esotericsoftware.kryo</groupId>
       <artifactId>kryo</artifactId>
       <version>2.20</version>
+      <!-- Exclude asm version from kryo. Incompatible with asm version from fedora-->
+      <exclusions>
+        <exclusion>
+          <groupId>org.ow2.asm</groupId>
+          <artifactId>asm</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.googlecode.multithreadedtc</groupId>
